--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         body {
             margin: 0px;
             min-height: 100%;
+            background-size: cover;
         }
     </style>
 </head>
