--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,17 +2,15 @@
 <html>
 
 <head>
-    <head>
-        <link rel = "stylesheet" href = "style/index.css">
-    </head>
+    <link rel = "stylesheet" href = "style/style-main.css">
 </head>
 
 <body>
     <div class= "welcome-container">
         <div id = "navbar">
-            <li><a href="pages/about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="portfolio-about.html">About Me</a></li>
+            <li><a href="https://github.com/saulgalaviz/portfolio">Projects</a></li>
+            <li><a href="#projects">Contact</a></li>
         </div>
 
 
