--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html>
 
 <head>
-    <head>
-        <link rel = "stylesheet" href = "style/index.css">
-    </head>
+    <link rel = "stylesheet" href = "style/index.css">
 </head>
 
 <body>
-    <div class= "welcome-container">
+    <div class= "background-container">
         <div id = "navbar">
-            <li><a href="pages/about.html">About Me</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="https://github.com/saulgalaviz">Projects</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </div>
-
-
     
-        <div id = "welcome-section">
+        <div id = "hello-world">
             <h1>Hello World</h1>
             <p>Here Lies Saul's Story and Accomplishments</p>
         </div>
