--- a/about.html
+++ b/about.html
@@ -8,12 +8,10 @@
 <body>
     <div class= "welcome-container">
         <div id = "navbar">
-            <li><a href="portfolio-about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz/portfolio">Projects</a></li>
-            <li><a href="#projects">Contact</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </div>
-
-
     
         <div id = "welcome-section">
             <h1>Hello World</h1>
