--- a/about.html
+++ b/about.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
-    <div class= "welcome-container">
+    <div class= "about-container">
         <div id = "navbar">
             <li><a href="about.html">About Me</a></li>
             <li><a href="https://github.com/saulgalaviz">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     
-        <div id = "welcome-section">
+        <div id = "about-section">
             <h1>Hello World</h1>
-            <p>Here Lies Saul's Story and Accomplishments</p>
+            <p>Born and raised into a family</p>
         </div>
     </div>
 </body>
