--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel = "stylesheet" href = "style/style-main.css">
+    <link rel = "stylesheet" href = "style/about.css">
 </head>
 
 <body>
@@ -15,7 +15,8 @@
     
         <div id = "about-section">
             <h1>Hello World</h1>
-            <p>Born and raised into a family</p>
+            <p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
+            <p>I was facinated at that age and </p>
         </div>
     </div>
 </body>
