--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,17 @@
 </head>
 
 <body>
-    <div class= "welcome-container">
+    <div class= "contact-container">
         <div id = "navbar">
-            <li><a href="portfolio-about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz/portfolio">Projects</a></li>
-            <li><a href="#projects">Contact</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </div>
-
-
     
-        <div id = "welcome-section">
-            <h1>Hello World</h1>
-            <p>Here Lies Saul's Story and Accomplishments</p>
+        <div id = "contact-section">
+            <a href="mailto:us@saulgalaviz97@gmail.com">Email me</a><br>
+            Address Location: Santa Ana near Costa Mesa and Irvine<br>
+            Phone: +1 (714)727-8637
         </div>
     </div>
 </body>
