--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel = "stylesheet" href = "style/style-main.css">
+    <link rel = "stylesheet" href = "style/contact.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     
         <div id = "contact-section">
             <a href="mailto:us@saulgalaviz97@gmail.com">Email me</a><br>
-            Address Location: Santa Ana near Costa Mesa and Irvine<br>
+            Address Location: Santa Ana bordering Costa Mesa and Irvine<br>
             Phone: +1 (714)727-8637
         </div>
     </div>
