--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         </div>
     
         <div id = "about-section">
-            <h1>Hello World</h1>
+            <h1>Saul Galaviz</h1>
             <p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
             <p>I was facinated at that age and </p>
         </div>
