UPDATED Contact and Projects

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,9 @@
         <div id = "contact-section">
             <a href="mailto:us@saulgalaviz97@gmail.com">Email me</a><br>
             Address Location: Santa Ana bordering Costa Mesa and Irvine<br>
-            Phone: +1 (714)727-8637
+            Phone: +1 (714)727-8637<br>
+            <a href="https://www.linkedin.com/in/saulgalaviz/">LinkedIn</a><br>
+            <a href="https://github.com/saulgalaviz">GitHub</a>
         </div>
     </div>
 </body>
