--- a/projects.html
+++ b/projects.html
@@ -2,22 +2,32 @@
 <html>
 
 <head>
-    <link rel = "stylesheet" href = "style/style-main.css">
+    <link rel = "stylesheet" href = "projects.css">
 </head>
 
 <body>
-    <div class= "welcome-container">
+    <div class= "projects-container">
         <div id = "navbar">
             <li><a href="portfolio-about.html">About Me</a></li>
             <li><a href="https://github.com/saulgalaviz/portfolio">Projects</a></li>
             <li><a href="#projects">Contact</a></li>
         </div>
-
-
     
-        <div id = "welcome-section">
-            <h1>Hello World</h1>
-            <p>Here Lies Saul's Story and Accomplishments</p>
+        <div id = "projects-section">
+            <table style="width:100%">
+                <tr>
+                    <td>Virtual Fitting Room</td>
+                    <td>Notepad</td> 
+                </tr>
+                <tr>
+                    <td>Front End Works</td>
+                    <td>Back End Works</td> 
+                </tr>
+                <tr>
+                    <td>Leetcode Submissions</td>
+                    <td>Data Structures and Algorithms</td> 
+                  </tr>
+              </table>
         </div>
     </div>
 </body>
