--- a/about.html
+++ b/about.html
@@ -9,14 +9,18 @@
     <div class= "about-container">
         <div id = "navbar">
             <li><a href="about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
+            <li><a href="https://github.com/saulgalaviz" target="_blank">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     
         <div id = "about-section">
-            <h1>Saul Galaviz</h1>
-            <p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
-            <p>I was facinated at that age and </p>
+            <!--<p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
+            <p>I was facinated at that age and </p>  -->
+            <p>I’m currently learning industry tools and applying it towards extracurricular projects, such as having pushed this portfolio online.
+                My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
+                working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
+                were not taught to me during my undergrad.
+            </p> 
         </div>
     </div>
 </body>
