--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class= "background-container">
         <div id = "navbar">
             <li><a href="about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
+            <li><a href="https://github.com/saulgalaviz" target="_blank">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     
