--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
             <a href="mailto:us@saulgalaviz97@gmail.com">Email me</a><br>
             Address Location: Santa Ana bordering Costa Mesa and Irvine<br>
             Phone: +1 (714)727-8637<br>
-            <a href="https://www.linkedin.com/in/saulgalaviz/">LinkedIn</a><br>
-            <a href="https://github.com/saulgalaviz">GitHub</a>
+            <a href="https://www.linkedin.com/in/saulgalaviz/" target="_blank">LinkedIn</a><br>
+            <a href="https://github.com/saulgalaviz" target="_blank">GitHub</a>
         </div>
     </div>
 </body>
