--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <link rel = "stylesheet" href = "projects.css">
+    <link rel = "stylesheet" href = "style/projects.css">
 </head>
 
 <body>
     <div class= "projects-container">
         <div id = "navbar">
-            <li><a href="portfolio-about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz/portfolio">Projects</a></li>
-            <li><a href="#projects">Contact</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="https://github.com/saulgalaviz" target="_blank">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </div>
     
         <div id = "projects-section">
