--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
     <div class= "contact-container">
         <div id = "navbar">
             <li><a href="about.html">About Me</a></li>
-            <li><a href="https://github.com/saulgalaviz">Projects</a></li>
+            <li><a href="https://github.com/saulgalaviz" target="_blank">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     
         <div id = "contact-section">
-            <a href="mailto:us@saulgalaviz97@gmail.com">Email me</a><br>
+            <a href="mailto:saulgalaviz97@gmail.com">Email me</a><br>
             Address Location: Santa Ana bordering Costa Mesa and Irvine<br>
             Phone: +1 (714)727-8637<br>
             <a href="https://www.linkedin.com/in/saulgalaviz/" target="_blank">LinkedIn</a><br>
