--- a/about.html
+++ b/about.html
@@ -16,11 +16,76 @@
         <div id = "about-section">
             <!--<p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
             <p>I was facinated at that age and </p>  -->
+            <h1>Saul Galaviz</h1>
             <p>I’m currently learning industry tools and applying it towards extracurricular projects, such as having pushed this portfolio online.
-                My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
-                working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
-                were not taught to me during my undergrad.
-            </p> 
+            My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
+            working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
+            were not taught to me during my undergrad.</p>
+
+            <h2>EDUCATION</h2>
+            <p><strong>Bachelors of Science: Computer Science<br>
+                California States Polytechnic University, Pomona<br>
+                GPA: 3.4<br>
+                Graduation Date: May 2019</p></strong>
+
+            <h2>RELATED COURSEWORK</h2>
+            <table style="width:100%">
+                <tr>
+                    <td>Software Development Lifecycle: Agile</td>
+                    <td>Operating Systems</td> 
+                    <td>Databases</td>
+                </tr>
+                <tr>
+                    <td>Design and Analysis of Algorithms</td>
+                    <td>Symbolic Programming</td> 
+                    <td>Data Structures</td>
+                </tr>
+                <tr>
+                    <td>Object-Oriented Language Design</td>
+                    <td>Graphical User Interfaces</td> 
+                    <td>Graphics</td>
+                </tr>
+            </table>
+
+            <h2>SKILLS</h2>
+            <p><strong>PROGRAMMING LANGUAGES</strong><br></p>
+                <table style="width:100%">
+                    <tr>
+                        <td>Java (expert)</td>
+                        <td>SQL (proficient)</td> 
+                        <td>JavaScript (proficient)</td>
+                    </tr>
+                    <tr>
+                        <td>HTML/CSS (proficient)</td>
+                        <td>C++ (prior experience)</td> 
+                        <td>Python (prior experience)</td>
+                    </tr>
+                </table>
+
+            <p><strong>TECHNOLOGIES</strong><br></p>
+            <table style="width:100%">
+                <tr>
+                    <td>Eclipse (proficient)</td>
+                    <td>GitHub (proficient)</td> 
+                    <td>Command Line (prior experience)</td>
+                </tr>
+                <tr>
+                    <td>UML/ERWIN (prior experience)</td>
+                    <td>Unity (prior experience)</td> 
+                    <td>Junit Testing (prior experience)</td>
+                </tr>
+                <tr>
+                    <td>React.js (apprentice)</td>
+                    <td>Angular.js (apprentice)</td> 
+                    <td>Node.js (apprentice)</td>
+                </tr>
+            </table>
+
+            <h2>ACTIVITIES</h2>
+            <p><strong>Cal Poly Pomona Ignite · High School Tutor · 2018-01 – 2019-05</strong><br>
+                Ex-Google sponsored club at Cal Poly Pomona, focused on introducing computer science principles to students at earlier ages in nearby 
+                schools. Lessons for tutoring mainly involved MIT’s APP Inventor, but other times Python and Arduino Robots were involved.<br>
+                Tutored in the high school group. Tutoring students included presentations as well as face to face.</p>
         </div>
     </div>
 </body>
