--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+    <title>Saul Galaviz's Portfolio</title>
+
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Portfolio">
+    <meta name="keywords" content="HTML,CSS">
+    <meta name="author" content="Saul Galaviz">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "style/contact.css">
 </head>
 
