--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 
 <head>
-    <title>Saul Galaviz's Portfolio</title>
+    <title>Saul's Portfolio</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="Portfolio">
     <meta name="keywords" content="HTML,CSS">
     <meta name="author" content="Saul Galaviz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
+
     <link rel = "stylesheet" href = "style/index.css">
 </head>
 
@@ -22,7 +25,6 @@
     
         <div id = "hello-world">
             <h1>Hello World</h1>
-            <p>Here Lies Saul's Story and Accomplishments</p>
         </div>
     </div>
 </body>
