--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="description" content="Portfolio">
-    <meta name="keywords" content="HTML,CSS">
+    <meta name="keywords" content="HTML,CSS,Javascript">
     <meta name="author" content="Saul Galaviz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,11 +22,23 @@
             <li><a href="https://github.com/saulgalaviz" target="_blank">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
-    
-        <div id = "hello-world">
-            <h1>Hello World</h1>
+        
+        <div id = text>
+            <div id = "portrait">
+                <img src="https://i.imgur.com/NUXhWOz.jpg" alt="Picture" width="50%" height="50%">
+            </div
+
+            ><div id = "hello-world">
+                <h1>Hello World to Saul Galaviz</h1>
+            </div
+
+            ><div id = "changing-text">
+                <span>a Gym Rat</span>
+            </div>
         </div>
     </div>
+
+    <script src="script/index.js"></script>
 </body>
 
 </html>
