UPDATED About Page

--- a/about.html
+++ b/about.html
@@ -24,17 +24,17 @@
         <div id = "about-section">
             <!--<p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
             <p>I was facinated at that age and </p>  -->
-            <h1>Saul Galaviz</h1>
-            <p>I’m currently learning industry tools and applying it towards extracurricular projects, such as having pushed this portfolio online.
-            My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
+            <h1>Saul Galaviz</h1><br>
+            <p>My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
             working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
-            were not taught to me during my undergrad.</p>
+            were not taught to me during my undergrad. I’m currently learning industry tools and applying it towards projects, such as having pushed 
+            this portfolio online.</p><br><br>
 
-            <h2>EDUCATION</h2>
+            <h2>EDUCATION</h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
                 California States Polytechnic University, Pomona<br>
                 GPA: 3.4<br>
-                Graduation Date: May 2019</p></strong>
+                Graduation Date: May 2019</p></strong><br><br>
 
             <h2>RELATED COURSEWORK</h2>
             <table style="width:100%">
@@ -53,9 +53,9 @@
                     <td>Graphical User Interfaces</td> 
                     <td>Graphics</td>
                 </tr>
-            </table>
+            </table><br>
 
-            <h2>SKILLS</h2>
+            <h2>SKILLS</h2><br>
             <p><strong>PROGRAMMING LANGUAGES</strong><br></p>
                 <table style="width:100%">
                     <tr>
@@ -68,7 +68,7 @@
                         <td>C++ (prior experience)</td> 
                         <td>Python (prior experience)</td>
                     </tr>
-                </table>
+                </table><br>
 
             <p><strong>TECHNOLOGIES</strong><br></p>
             <table style="width:100%">
@@ -87,9 +87,9 @@
                     <td>Angular.js (apprentice)</td> 
                     <td>Node.js (apprentice)</td>
                 </tr>
-            </table>
+            </table><br>
 
-            <h2>ACTIVITIES</h2>
+            <h2>ACTIVITIES</h2><br>
             <p><strong>Cal Poly Pomona Ignite · High School Tutor · 2018-01 – 2019-05</strong><br>
                 Ex-Google sponsored club at Cal Poly Pomona, focused on introducing computer science principles to students at earlier ages in nearby 
                 schools. Lessons for tutoring mainly involved MIT’s APP Inventor, but other times Python and Arduino Robots were involved.<br>
