--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div
 
             ><div id = "hello-world">
-                <h1>Hello World to Saul Galaviz</h1>
+                <h1>Saul Galaviz</h1>
             </div
 
             ><div id = "changing-text">
