UPDATED About Page

--- a/about.html
+++ b/about.html
@@ -33,25 +33,25 @@
             <h2>EDUCATION</h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
                 California States Polytechnic University, Pomona<br>
-                GPA: 3.4<br>
-                Graduation Date: May 2019</p></strong><br><br>
+                GPA: 3.4<br></strong>
+                Graduation Date: May 2019</p><br><br>
 
             <h2>RELATED COURSEWORK</h2>
             <table style="width:100%">
                 <tr>
-                    <td>Software Development Lifecycle: Agile</td>
-                    <td>Operating Systems</td> 
-                    <td>Databases</td>
+                    <td><strong>Software Development Lifecycle: Agile</strong></td>
+                    <td><strong>Operating Systems</strong></td> 
+                    <td><strong>Databases</strong></td>
                 </tr>
                 <tr>
-                    <td>Design and Analysis of Algorithms</td>
-                    <td>Symbolic Programming</td> 
-                    <td>Data Structures</td>
+                    <td><strong>Design and Analysis of Algorithms</strong></td>
+                    <td><strong>Symbolic Programming</strong></td> 
+                    <td><strong>Data Structures</strong></td>
                 </tr>
                 <tr>
-                    <td>Object-Oriented Language Design</td>
-                    <td>Graphical User Interfaces</td> 
-                    <td>Graphics</td>
+                    <td><strong>Object-Oriented Language Design</strong></td>
+                    <td><strong>Graphical User Interfaces</strong></td> 
+                    <td><strong>Graphics</strong></td>
                 </tr>
             </table><br>
 
@@ -59,33 +59,33 @@
             <p><strong>PROGRAMMING LANGUAGES</strong><br></p>
                 <table style="width:100%">
                     <tr>
-                        <td>Java (expert)</td>
-                        <td>SQL (proficient)</td> 
-                        <td>JavaScript (proficient)</td>
+                        <td><strong>Java </strong>(expert)</td>
+                        <td><strong>SQL </strong>(proficient)</td> 
+                        <td><strong>JavaScript </strong>(proficient)</td>
                     </tr>
                     <tr>
-                        <td>HTML/CSS (proficient)</td>
-                        <td>C++ (prior experience)</td> 
-                        <td>Python (prior experience)</td>
+                        <td><strong>HTML/CSS </strong>(proficient)</td>
+                        <td><strong>C++ </strong>(prior experience)</td> 
+                        <td><strong>Python </strong>(prior experience)</td>
                     </tr>
                 </table><br>
 
             <p><strong>TECHNOLOGIES</strong><br></p>
             <table style="width:100%">
                 <tr>
-                    <td>Eclipse (proficient)</td>
-                    <td>GitHub (proficient)</td> 
-                    <td>Command Line (prior experience)</td>
+                    <td><strong>Eclipse </strong>(proficient)</td>
+                    <td><strong>GitHub </strong>(proficient)</td> 
+                    <td><strong>Command Line </strong>(prior experience)</td>
                 </tr>
                 <tr>
-                    <td>UML/ERWIN (prior experience)</td>
-                    <td>Unity (prior experience)</td> 
-                    <td>Junit Testing (prior experience)</td>
+                    <td><strong>UML/ERWIN </strong>(prior experience)</td>
+                    <td><strong>Unity </strong>(prior experience)</td> 
+                    <td><strong>Junit Testing </strong>(prior experience)</td>
                 </tr>
                 <tr>
-                    <td>React.js (apprentice)</td>
-                    <td>Angular.js (apprentice)</td> 
-                    <td>Node.js (apprentice)</td>
+                    <td><strong>React.js </strong>(apprentice)</td>
+                    <td><strong>Angular.js </strong>(apprentice)</td> 
+                    <td><strong>Node.js </strong>(apprentice)</td>
                 </tr>
             </table><br>
 
