--- a/about.html
+++ b/about.html
@@ -25,10 +25,9 @@
             <!--<p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
             <p>I was facinated at that age and </p>  -->
             <h1>Saul Galaviz</h1><br>
-            <p>My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and realized that I wanted to get my hands
+            <p>My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and knew that I wanted to get my hands
             working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
-            were not taught to me during my undergrad. I’m currently learning industry tools and applying it towards projects, such as having pushed 
-            this portfolio online.</p><br><br>
+            were not taught to me during my undergrad. I’m applying these tools towards projects, such as having pushed this portfolio online.</p><br><br>
 
             <h2>EDUCATION</h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
