--- a/about.html
+++ b/about.html
@@ -4,12 +4,14 @@
 <head>
     <title>Saul's Portfolio</title>
 
-
     <meta charset="UTF-8">
     <meta name="description" content="Portfolio">
     <meta name="keywords" content="HTML,CSS">
     <meta name="author" content="Saul Galaviz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
+
     <link rel = "stylesheet" href = "style/about.css">
 </head>
 
@@ -27,7 +29,7 @@
             <h1>Saul Galaviz</h1><br>
             <p>My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and knew that I wanted to get my hands
             working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
-            were not taught to me during my undergrad. I’m applying these tools towards projects, such as having pushed this portfolio online.</p><br><br>
+            were not taught to me during my undergrad. I’m currently applying these tools towards projects, such as having pushed this portfolio online.</p><br><br>
 
             <h2>EDUCATION</h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
