--- a/about.html
+++ b/about.html
@@ -26,18 +26,18 @@
         <div id = "about-section">
             <!--<p>Born and raised into a family with roots in Mexico, technology wasn't available to me until I was 9 years old.</p>
             <p>I was facinated at that age and </p>  -->
-            <h1>Saul Galaviz</h1><br>
+            <h1><u>Saul Galaviz</h1></u><br>
             <p>My background is in computer science. I recently completed my undergrad at Cal Poly Pomona and knew that I wanted to get my hands
             working on Front End and Back End technologies. Now after having graduated, I’m pushing myself to learn such industry technologies which 
             were not taught to me during my undergrad. I’m currently applying these tools towards projects, such as having pushed this portfolio online.</p><br><br>
 
-            <h2>EDUCATION</h2><br>
+            <h2><u>EDUCATION</u></h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
                 California States Polytechnic University, Pomona<br>
                 GPA: 3.4<br></strong>
                 Graduation Date: May 2019</p><br><br>
 
-            <h2>RELATED COURSEWORK</h2>
+            <h2><u>RELATED COURSEWORK</u></h2>
             <table style="width:100%">
                 <tr>
                     <td><strong>Software Development Lifecycle: Agile</strong></td>
@@ -56,7 +56,7 @@
                 </tr>
             </table><br>
 
-            <h2>SKILLS</h2><br>
+            <h2><u>SKILLS</u></h2><br>
             <p><strong>PROGRAMMING LANGUAGES</strong><br></p>
                 <table style="width:100%">
                     <tr>
@@ -90,7 +90,7 @@
                 </tr>
             </table><br>
 
-            <h2>ACTIVITIES</h2><br>
+            <h2><u>ACTIVITIES</u></h2><br>
             <p><strong>Cal Poly Pomona Ignite · High School Tutor · 2018-01 – 2019-05</strong><br>
                 Ex-Google sponsored club at Cal Poly Pomona, focused on introducing computer science principles to students at earlier ages in nearby 
                 schools. Lessons for tutoring mainly involved MIT’s APP Inventor, but other times Python and Arduino Robots were involved.<br>
