--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
             <h2><u>EDUCATION</u></h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
-                California States Polytechnic University, Pomona<br>
+                California State Polytechnic University, Pomona<br>
                 GPA: 3.4<br></strong>
                 Graduation Date: May 2019</p><br><br>
 
