--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
             <h2><u>EDUCATION</u></h2><br>
             <p><strong>Bachelors of Science: Computer Science<br>
                 California State Polytechnic University, Pomona<br>
-                GPA: 3.4<br></strong>
+                GPA: 3.6<br></strong>
                 Graduation Date: May 2019</p><br><br>
 
-            <h2><u>RELATED COURSEWORK</u></h2>
+            <h2><u>RELEVANT COURSEWORK</u></h2>
             <table style="width:100%">
                 <tr>
                     <td><strong>Software Development Lifecycle: Agile</strong></td>
@@ -66,8 +66,8 @@
                     </tr>
                     <tr>
                         <td><strong>HTML/CSS </strong>(proficient)</td>
-                        <td><strong>C++ </strong>(prior experience)</td> 
-                        <td><strong>Python </strong>(prior experience)</td>
+                        <td><strong>C++ </strong>(familiar)</td> 
+                        <td><strong>Python </strong>(familiar)</td>
                     </tr>
                 </table><br>
 
@@ -76,17 +76,17 @@
                 <tr>
                     <td><strong>Eclipse </strong>(proficient)</td>
                     <td><strong>GitHub </strong>(proficient)</td> 
-                    <td><strong>Command Line </strong>(prior experience)</td>
+                    <td><strong>Java Swing </strong>(proficient)</td>
                 </tr>
                 <tr>
-                    <td><strong>UML/ERWIN </strong>(prior experience)</td>
-                    <td><strong>Unity </strong>(prior experience)</td> 
-                    <td><strong>Junit Testing </strong>(prior experience)</td>
+                    <td><strong>UML/ERWIN </strong>(familiar)</td>
+                    <td><strong>Unity </strong>(familiar)</td> 
+                    <td><strong>Junit Testing </strong>(familiar)</td>
                 </tr>
                 <tr>
-                    <td><strong>React.js </strong>(apprentice)</td>
-                    <td><strong>Angular.js </strong>(apprentice)</td> 
-                    <td><strong>Node.js </strong>(apprentice)</td>
+                    <td><strong>React.js </strong>(familiar)</td> 
+                    <td><strong>Node.js </strong>(familiar)</td>
+                    <td><strong>Command Line </strong>(familiar)</td>
                 </tr>
             </table><br>
 
